ingress-traefik/ingress_route_traefik.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`traefik.127.0.0.1.xip.io`)
      priority: 10
      services:
        - kind: TraefikService
          name: api@internal
