ingress-traefik/ingress_route_whoami.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: whoami
  namespace: whoami
spec:
  entryPoints:
    - web
    - websecure
  routes:
  - kind: Rule
    match: Host(`whoami-ir.127.0.0.1.xip.io`)
    middlewares:
    - name: ak-outpost-authentik-embedded-outpost
      namespace: authentik
    services:
    - name: whoami
      port: 80
